bug 369147, "Warning: unrecognized command line flag -foreground" on launch r=josh Don't add the '-foreground' flag to the list of command line arguments if we're not restarting, since no-one outside of XRE_main knows how to handle it.